2013-05-27 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_gis.php: added function "gis_calculate_distance"
	to calculate the distance between to points, and return in the
	international metric system, kilometers.
	
	* operation/agentes/gis_view.php: added column with the show the
	distance with the previous point.
	
	MERGED FROM THE TRUNK

2013-05-24  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	extensions/snmp_explorer.php: Fixed errors in
	snmp browser adapting output of new snmp way
	of retrieve data and avoiding interfaces without
	name

2013-05-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php: cleaned source code style.
	
	* include/graphs/pChart/pPie.class.php: fixed the border color of
	piechart (merged from the trunk).
	
	Fixes: #2230

2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js,
	include/functions_visual_map.php: fixed to show the lines between
	the items in the visualmap into a dashboard.
	
	Fixes: #2232

2013-05-23 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/graphs.php,
	godmode/reporting/reporting_builder.item_editor.php: fixed ACL for
	the custom graphs.
	
	Fixes: #2233

2013-05-22 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the
	update the module graph item.
	
	Fixes: #2234
	
	* godmode/reporting/visual_console_builder.php: fixed lost height
	and width of item when add several module graphs.

2013-05-22  Sergio Martin <sergio.martin@artica.es>

	* images/gis_map/icons/star.default.png
	images/gis_map/icons/cross.warning.png
	images/gis_map/icons/star.bad.png
	images/gis_map/icons/cross.ok.png
	images/gis_map/icons/marker.default.png
	images/gis_map/icons/square_marker.warning.png
	images/gis_map/icons/circle.warning.png
	images/gis_map/icons/marker.bad.png
	images/gis_map/icons/square_marker.ok.png
	images/gis_map/icons/circle.ok.png